<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_background">

    <ImageView
        android:layout_marginTop="40dp"
        android:id="@+id/img1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logistics_1" />

    <TextView
        android:layout_marginHorizontal="20dp"
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/tahoma"
        android:text="@string/addNewsSuccess"
        android:textColor="@color/colorGreen50"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv02"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/text1"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnDialogDismiss"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv02"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape_button"
        android:fontFamily="@font/tahoma"
        android:text="@string/text2"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />

</RelativeLayout>
